# bevy_spacetimedb

bevy_spacetimedb/: Cargo.toml
bevy_spacetimedb/src/: plugin.rs
