[package]
name = "bevy_spacetimedb"
description = "Use SpacetimeDB in your Bevy application"
repository = "https://github.com/JulienLavocat/bevy_spacetimedb"
readme = "../README.md"
version = "0.7.2"
edition = "2024"
license = "Apache-2.0"

[features]
default = ["macros"]
macros = ["dep:bevy_spacetimedb_macros"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
spacetimedb-sdk = { version = "1.11.3", git = "https://github.com/kistz/SpacetimeDB.git", branch = "rust-web-sdk-updated", features = ["web"] }
wasm-bindgen-futures = "0.4"

[dependencies]
spacetimedb-sdk = { version = "1.11.3", git = "https://github.com/kistz/SpacetimeDB.git", branch = "rust-web-sdk-updated" }
bevy = { workspace = true }
bevy_spacetimedb_macros = { version = "0.2.0", optional = true }

[[example]]
name = "bevy_spacetimedb"
path = "../examples/bevy_spacetimedb.rs"
